--- a/Emulation Project/Debug/makefile
+++ b/Emulation Project/Debug/makefile
@@ -44,7 +44,7 @@ all: Emulation\ Project
 Emulation\ Project: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C++ Linker'
-	g++  -o "Emulation Project" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++ -lcrafter -o "Emulation Project" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
